--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.data.mongodb.database=${MONGO_DB}
 spring.data.mongodb.uri=mongodb+srv://${MONGO_USER}:${MONGO_PASS}@${MONGO_CLUSTER}
-
+spring.mvc.dispatch-options-request=true
 server.tomcat.accesslog.enabled=true
 
